#8 add get info velo
